Fixed aligning bug on ios.

--- a/app/sass/game.scss
+++ b/app/sass/game.scss
@@ -62,6 +62,7 @@ $matrixColor: #a2c64c;
             }
         }
         .game-goal-cell {
+            vertical-align: bottom;
             $colorActionRequired: #FFB200;
             .game-goal-container {
                 float: right;
